# gar4ds

./: .gitignore  Makefile  README.md  pyproject.toml
Docs/: EXECUTION_FLOW_QUICK_REFERENCE.md  PIPELINE_DOCUMENTATION.md  PROJECT_PURPOSE.md  SCRIPT_ANALYSIS_MULTIVARIATE_UPGRADE.md  eda_analysis.txt  multivar_plan.md  notes_on_paper.md  section_4_plan-md  spatial_durbin_model_refactoring_plan.md
assets/maps/: lisa_clusters_explorer.html  pm10_meteorological_explorer.html  seasonal_pm10_patterns.html  stations_interactive_map.html
config/: pipeline.yaml
gar4ds/: __init__.py  config.py  run_pipeline.py
notebooks/: preprocessing.ipynb
results/: durbin_spillover_analysis.txt  external_sources_Borgo_Valsugana.csv  external_sources_Monte_Gaza.csv  external_sources_Parco_S._Chiara.csv  external_sources_Piana_Rotaliana.csv  impact_matrix_full.csv  impact_matrix_targets.csv  influence_profiles.csv  internal_external_spillover.csv  internal_sources_Borgo_Valsugana.csv  internal_sources_Monte_Gaza.csv  internal_sources_Parco_S._Chiara.csv  internal_sources_Piana_Rotaliana.csv  network_centrality.csv  spillover_sources_Borgo_Valsugana.csv  spillover_sources_Monte_Gaza.csv  spillover_sources_Parco_S._Chiara.csv  spillover_sources_Piana_Rotaliana.csv  station_spillover_decomposition.csv  target_stations_spillover.csv  top_external_polluters.csv  top_external_polluters_detailed.csv
scripts/: config.py  durbin_spillover_analysis.py  impact_matrix_analysis.py  internal_external_spillover.py  spatial_analysis.py
weights/: spatial_weights_knn6.gal
(+115 files in other folders)
