[project]
name = "gar4ds"
version = "1.0.0"
description = "Pollution Corridors Analysis - Po Valley to Alpine Region"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "geopandas>=1.0.0",
    "pysal>=24.0.0",
    "esda>=2.6.0",
    "libpysal>=4.12.0",
    "spreg>=1.6.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "folium>=0.18.0",
    "networkx>=3.3",
    "scipy>=1.14.0",
    "shapely>=2.0.0",
    "polar>=0.0.127",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "contextily>=1.7.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
]

[project.scripts]
gar4ds = "gar4ds.run_pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gar4ds*"]
